# Axe

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md
.github/workflows/: release.yaml  tests.yaml
src/: main.rs
templates/: config.rs.jinja  metadata.json
tests/: cut_count_tests.sh  cut_segments_tests.sh  file.txt  tests.sh
