load("@app_deps//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("@textforge//:defs.bzl", "generate_files")

filegroup(
    name = "config_template",
    srcs = ["templates/config.rs.jinja"],
    visibility = ["//visibility:private"],
)

generate_files(
    name = "config_gen",
    srcs = [
        ":config_template"
    ],
    datafile = 'templates/metadata.json',
    visibility = ["//visibility:public"],
)

rust_library(
    name = "config",
    srcs = [":config_gen"],
    crate_features = ["default"],
    rustc_flags = ["--cap-lints=allow"],
)

rust_binary(
    name = "bin",
    srcs = ["src/main.rs"],
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = all_crate_deps(
        normal = True,
    ) + [":config"],
)